--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,17 @@ html {
   max-width: 1050px;
   margin: 0 auto; }
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden; }
+
 .header {
   background-color: #fff; }
 
@@ -179,6 +190,10 @@ html {
     text-decoration: none; }
     .b-menu__btn span {
       padding: 0 14px; }
+    .b-menu__btn svg {
+      max-width: 10px;
+      max-height: 6px;
+      margin: 0 12px; }
 
 .dish__description {
   margin-right: 20px; }
@@ -198,5 +213,233 @@ html {
 
 .dish__price {
   margin-left: 40px; }
+
+.title-style {
+  position: relative;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-bottom: 80px;
+  font-family: "Aleo", serif;
+  font-size: 1.25rem;
+  color: #3B3B3B;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  text-transform: uppercase; }
+
+.title-style:after {
+  position: absolute;
+  content: '';
+  width: 13.333vw;
+  height: 1px;
+  background-color: #E5E3E3;
+  right: calc(-15px - 13.333vw);
+  top: 50%; }
+
+.b-featured {
+  padding: 100px 0; }
+  .b-featured__section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .b-featured__top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .b-featured__slider span {
+    display: inline-block;
+    margin-right: 11px;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background-color: #DEDEDE; }
+  .b-featured__slider span:hover {
+    background-color: #9B9B9B; }
+  .b-featured__block--img {
+    max-width: 230px;
+    max-height: 200px; }
+    .b-featured__block--img img {
+      width: 100%;
+      height: auto;
+      -webkit-transition: .5s;
+      -o-transition: .5s;
+      transition: .5s; }
+    .b-featured__block--img img:hover {
+      -webkit-box-shadow: 11px 8px 8px 0px rgba(0, 0, 0, 0.15);
+      box-shadow: 11px 8px 8px 0px rgba(0, 0, 0, 0.15);
+      -webkit-transition: .5s;
+      -o-transition: .5s;
+      transition: .5s; }
+  .b-featured__block--desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding-top: 28px;
+    font-family: "Aleo", serif;
+    color: #555555;
+    font-size: 1rem;
+    letter-spacing: 0.05em;
+    font-weight: 300; }
+  .b-featured__block--title {
+    font-weight: 300; }
+
+.rating_block {
+  margin-left: -3px;
+  width: 90px;
+  height: 18px; }
+
+.rating_block input[type="radio"] {
+  display: none; }
+
+.label_rating {
+  float: right;
+  display: block;
+  width: 18px;
+  height: 18px;
+  background: url(../img/rating.png) no-repeat 50% 0;
+  cursor: pointer; }
+
+.rating_block .label_rating:hover,
+.rating_block .label_rating:hover ~ .label_rating,
+.rating_block input[type="radio"]:checked ~ .label_rating {
+  background-position: 50% -18px; }
+
+.b-gallery {
+  margin-bottom: 200px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "big top-2 top-3" "big bottom-2 bottom-3"; }
+  .b-gallery__img {
+    width: 100%;
+    height: auto;
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s; }
+    .b-gallery__img--1 {
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 2;
+      -ms-grid-column: 1;
+      grid-area: big; }
+    .b-gallery__img--2 {
+      -ms-grid-row: 1;
+      -ms-grid-column: 2;
+      grid-area: top-2; }
+    .b-gallery__img--3 {
+      -ms-grid-row: 2;
+      -ms-grid-column: 2;
+      grid-area: bottom-2; }
+    .b-gallery__img--4 {
+      -ms-grid-row: 1;
+      -ms-grid-column: 3;
+      grid-area: top-3; }
+    .b-gallery__img--5 {
+      -ms-grid-row: 2;
+      -ms-grid-column: 3;
+      grid-area: bottom-3; }
+    .b-gallery__img:hover {
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      transform: scale(1.1);
+      -webkit-transition: 1s;
+      -o-transition: 1s;
+      transition: 1s; }
+
+.footer {
+  background-color: #3B3B3B; }
+  .footer .b-footer {
+    padding: 100px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    .footer .b-footer__section {
+      max-width: 25%;
+      font-family: "Aleo", serif;
+      color: #fff;
+      font-size: 1rem;
+      letter-spacing: 0.05em;
+      line-height: 1.875em;
+      font-weight: 300; }
+      .footer .b-footer__section .footer-title,
+      .footer .b-footer__section .footer-tel {
+        font-weight: 600; }
+      .footer .b-footer__section .footer-address {
+        font-style: initial;
+        max-width: 200px; }
+      .footer .b-footer__section .footer-tel {
+        text-decoration: none;
+        color: #fff; }
+    .footer .b-footer__menu {
+      max-width: 25%;
+      font-family: "Aleo", serif;
+      font-size: 1rem;
+      letter-spacing: 0.05em;
+      line-height: 2.1875em;
+      font-weight: 300;
+      list-style: none; }
+      .footer .b-footer__menu a {
+        color: #fff;
+        text-decoration: none; }
+    .footer .b-footer__contact {
+      max-width: 25%;
+      font-family: "Aleo", serif;
+      font-size: 0.875rem;
+      letter-spacing: 0.05em;
+      line-height: 2.14285em;
+      font-weight: 300;
+      color: #fff; }
+    .footer .b-footer__logo {
+      margin-bottom: 25px;
+      max-width: 82px;
+      max-height: 30px; }
+    .footer .b-footer__link a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: 600; }
+
+@media screen and (max-width: 1024px) {
+  .b-menu__dish {
+    width: 100%; }
+  .b-gallery {
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: "big top-2" "big bottom-2" "top-3 bottom-3"; }
+  .b-gallery__img--1 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 1; }
+  .b-gallery__img--2 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2; }
+  .b-gallery__img--3 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2; }
+  .b-gallery__img--4 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1; }
+  .b-gallery__img--5 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2; } }
 
 /*# sourceMappingURL=style.css.map */
